trying to fix failing tests for topic api
