# public/openapi/components/schemas/TopicObject.yaml
@@ -3,6 +3,10 @@ TopicObject:
     - $ref: '#/TopicObjectSlim'
     - type: object
       properties:
+        isAnonymous:
+          type: boolean
+          description: "Indicates if the post was made anonymously."
+          nullable: true
         lastposttime:
           type: number
         category:
@@ -199,6 +203,10 @@ TopicObjectSlim:
         uid:
           type: number
           description: A user identifier
+        isAnonymous:
+          type: boolean
+          description: "Indicates if the post was made anonymously."
+          nullable: true
         cid:
           type: number
           description: A category identifier
